﻿drkns 20.03.2016 11:57:40 +0200 - build 4585

1. Продолжение 4584.

drkns 20.03.2016 00:41:42 +0200 - build 4584

1. Убираем костыли, щедро расставленные повсеместно для поддержки VS2010 и компании.

drkns 19.03.2016 23:19:41 +0200

1. Given that our German users aren't happy with "#0003145: New German translation", I'm reverting it to the previous version.
   Only previously untranslated strings are picked from #0003145 now.

drkns 18.03.2016 18:03:45 +0200

1. Для сборки требуются VC++ 2015 / GCC 5.

drkns 18.03.2016 12:00:11 +0200 - build 4583

1. Продолжение 4582 - сортируем без расширения структуры FileListItem, которая и без того жирная.
   Кроме того, возможно, будет немного быстрее.

shmuel 17.03.2016 18:18:54 +0200 - build 4582

1. Кастомные сортировки в панелях повреждали содержимое внутренних структур FileListItem
   (это проявлялось при сборке Far с GCC 5.2 или 5.3).
   Алгоритм кастомной сортировки пришлось изменить, теперь нет прямой манипуляции с памятью.

drkns 14.03.2016 23:51:08 +0200 - build 4581

1. Вернём поведение ACTL_REDRAWALL, существовавшее до 4545.

shmuel 14.03.2016 11:39:07 +0200 - build 4580

1. При выводе на экран меню "Критерий сортировки" (CtrlF12) указатель ставится на текущую сортировку.

svs 14.03.2016 10:33:31 +0300 - build 4579

1. SQLite 3.11.1

shmuel 13.03.2016 21:45:25 +0200 - build 4578

1. Уточнение 4577.

shmuel 13.03.2016 01:35:20 +0200 - build 4577

1. В функции Panel.LoadCustomSortMode таблица параметров может включать в себя опциональное поле
   'Condition' (функцию). Данная функция может использоваться, например, в интерактивном режиме
   работы для изменения параметров сортировки, а также для её отмены.

drkns 12.03.2016 16:37:16 +0200 - build 4576

1. 0003194: Странное поведение при вставке в комстроку * и ? вплоть до падения

2. 0003195: Неверная подстановка имён файлов/каталогов с пробелами при включённой опции "Подставлять первый подходящий вариант"
