@@ -4,7 +4,7 @@
 #
 #LINK_ULINK - set if you want to use ulink for linking
 #
-#VC - set Visual C++ version (VC=10 - 2010) (we try to autodetect if not set)
+#VC - set Visual C++ version (VC=15 - 2015) (we try to autodetect if not set)
 #
 #AMD64 or CPU=AMD64 - set for x64 build
 #IA64 or CPU=IA64 - for IA64 build
@@ -59,13 +59,13 @@ DIRBIT=32
 
 !if !defined(VC) && defined(_NMAKE_VER)
 
-!if "$(_NMAKE_VER)">"14"
+!if "$(_NMAKE_VER)">"15"
+VC=15
+!elseif "$(_NMAKE_VER)">"14"
 VC=14
-!elseif "$(_NMAKE_VER)">"11"
-VC=11
 !else
 #default
-VC=10
+VC=14
 !endif
 !endif
 
@@ -318,12 +318,8 @@ LINKFLAGS=$(LINKFLAGS) /machine:ARM
 !endif
 
 # compiler-specific
-!if $(VC) >= 11 && defined (X86)
+!if defined (X86)
 CPPFLAG1=$(CPPFLAG1) /arch:IA32
-!endif
-
-!if $(VC) >= 14
-FIXCRT_CPPFLAGS = /Zc:threadSafeInit-
 !endif
 
 !ifdef ICL
@@ -409,7 +405,7 @@ $(INTDIR)\hook_wow64.obj: hook_wow64.cpp
 	$(CPP) $(CPPFLAGS) hook_wow64.cpp
 
 $(INTDIR)\vc_crt_fix_impl.obj: vc_crt_fix_impl.cpp
-	$(CPP) $(CPPFLAGS) $(FIXCRT_CPPFLAGS) vc_crt_fix_impl.cpp
+	$(CPP) $(CPPFLAGS) /Zc:threadSafeInit- vc_crt_fix_impl.cpp
 
 $(INTDIR)\vc_crt_fix_ulink.obj: vc_crt_fix_ulink.cpp
 	$(CPP) $(CPPFLAGS) vc_crt_fix_ulink.cpp
